chains: in-progress

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 OPENAI_API_KEY=sk-...
 LANGCHAIN_API_KEY=ls_...
 LANGSMITH_API_KEY=ls_...
-TAVILY_API_KEY=...
+TAVILY_API_KEY=tvly-...
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_PROJECT=reflexion agent
