--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "langchain-openai (>=0.3.12,<0.4.0)",
     "langgraph (>=0.3.29,<0.4.0)",
     "langchain-community (>=0.3.21,<0.4.0)",
-    "rich (>=14.0.0,<15.0.0)"
+    "rich (>=14.0.0,<15.0.0)",
+    "langchain-tavily (>=0.2.1,<0.3.0)"
 ]
 
 
